Draft version sent for review.

--- a/pnsac/newsletter/article_ContactInfo.tex
+++ b/pnsac/newsletter/article_ContactInfo.tex
@@ -3,11 +3,11 @@
 % Language: Latex
 
 
-\title{Board Members' Contact Information}
+\title{Board and Officer's Contact Information}
 
 \maketitle
 
-\section{PNSAC Executive}
+\section{Board of Directors}
 %\label{sec:misc_pnsac_executive}
 
 %\begin{minipage}{\columnwidth}
@@ -16,18 +16,22 @@
 Director, President\\
 \email{president@projectnorthstar.ca}}
 
-%\address{Bill Tate\\
-%Director, Vice President; Special Events, Quarterly Meetings \\
+\address{Roger Button\\
+Director, Corporate Secretary, NStar Chronicle Editor}\\
+
+\address{Bill Tate\\
+Director, Special Events}\\
 %613-523-8817\\
 %\email{billtate@bell.net}}
 
-\address{Bruce Gemmill\\
-Director, Project Manager; Membership\\
-\email{membership@projectnorthstar.ca}}
-
+\address{Phil Chrysler\\
+Director, Merchandise}\\
 
 \address{Garry Dupont\\
-Director, Project Manager}\\
+Director}\\
+
+\address{Neil Raynor\\
+Director}\\
 
 
 %\end{minipage}
@@ -36,23 +40,15 @@ Director, Project Manager}\\
 
 %\begin{minipage}{\columnwidth}
 
-%\address{Bruce Grant\\
-%Director, NStar Chronicle Editor\\
-%\email{editor@projectnorthstar.ca}}
-
-
-  
-%\address{Drew Hodge\\
-%Director, ewsletter typesetting, website, social media\\
-%\email{ldhodge@gmail.com}}
-  
-\address{Phil Chrysler\\
-Director, Merchandise}\\
-
 \columnbreak  
 
-\address{Roger Button\\
-Director, Corporate Secretary, NStar Chronicle Editor}\\
+\vspace{12pt}
+
+\section{Other Officers}
+
+\address{Bruce Gemmill\\
+Membership Secretary\\
+\email{membership@projectnorthstar.ca}}
 
 \address{Paul Labranche\\
 Treasurer\\
@@ -66,7 +62,6 @@ Treasurer\\
     Analysis Resources Support System (GRASS). The modification was
     made possible by kind permission of the Editor-in-Chief of
     GRASS-News.}}
-
 
 \small\address{Editor: Roger Button\\
 \small\email{editor@projectnorthstar.ca}}
