--- a/pnsac/newsletter/article_PresReport.tex
+++ b/pnsac/newsletter/article_PresReport.tex
@@ -10,15 +10,70 @@
 
 \maketitle
 
-As I write these words I am watching the falling snow and preparing for a nasty weather mix this evening and at the same time thinking of the spring and summer and our outdoor activities with the North Star aircraft. 2016 has every chance of being an interesting year for the North Star volunteers. Although full details are not available yet, we are expecting to be able to show off the plane to the general public and to other groups several times this year. 
+The last North Star Chronicle was published in March 2016 and since that time we
+have successfully continued our work on the aircraft while the Museum was making
+preparations for the Star Trek event in the Reserve Hangar. We were not asked to
+suspend our work, unlike in 2014 when preparations for the Star Wars event were
+being made. This has helped us to retain our Restoration volunteers and recruit
+two new ones. However, we are still short of Restoration volunteers and continue
+to actively work with the Museum to address this problem.
 
-We are continuing to work closely with the Museum conservation staff to develop plans for extended hours working which basically means running a restoration shift on one or more Saturdays each month. This should enable some members to become Restoration Volunteers even though they are not available for work Mondays to Fridays. We had hoped to start the shift before Easter but it looks now as if the start date will be in the fall. There are still some details of supervision, security and safety to be worked out. Running a Saturday shift is a new endeavour for the Museum and it is important for everybody that we take the necessary time to get the operation properly setup so that we have a successful start and a good model for any further out of hours working arrangements for PNSAC or any other volunteer organization working on a museum corporation artifact. 
+When Project North Star was originally formed in 2004, the Association was
+treated with considerable skepticism by the Museum. It was felt that restoring
+an aircraft of the size and complexity of a North Star, to the exacting
+standards of a national museum, was likely to be beyond the capabilities of a
+group of volunteers and that the project would probably fail.
 
-We were very pleased to welcome Chris Kitzan, the new Director General of the Canada Aviation and Space Museum to our first Members' Meeting of 2016 which was held in the Bush Theatre on February 27th. Chris acknowledged the importance of the partnership between the museum and Project North Star. Following the meeting, I saw Chris having a lively and upbeat conversation with our members, over coffee and snacks. 
+We will soon have completed 70,000 hours of volunteer work over a period of 14
+years, restoring everything we do, to what is acknowledged to be a very high
+standard. Skepticism is a thing of the past and we are now treated as a
+respected and ongoing part of the Museum operations.
 
-Prior to the Members' Meeting, several of us ran into Mike Charters, who is a volunteer maintenance mechanic at the Warplane Heritage Museum in Hamilton. Mike was one of the team who flew to England in the summer of 2014 for the tour of the UK by the Canadian Lancaster together with the British Lancaster. Mike generously agreed to speak to the members for a few minutes and had some very interesting stories about the trip.
- 
-One of the best activities for our members is to become an active volunteer. Our volunteers fall into two categories, Restoration Volunteers and Association Volunteers. The former are those who work on the North Star restoration and have to be limited in number because it is not possible to have too many people working at any one time; this is mainly for supervision and safety reasons. Association Volunteers are those who volunteer for other activities in our Association. There are many different things which need to be done in a volunteer organization and we encourage our members to contact us to volunteer for such things as meeting the public on aircraft open days, helping to organize events and assisting with sales of our merchandise. Volunteering has many rewards, from comradeship with other volunteers, enjoying involvement with an interesting aviation artifact and personal satisfaction derived from doing something worthwhile. If you are interested in exploring volunteering opportunities, do contact any one of our directors whose contact information is shown at the end of this newsletter. 
+Respect has to be earned and comes through hard work and in the case of aircraft
+restoration work, attention to detail. Our team of volunteers needs guidance
+both from the Museum staff and from our own senior volunteers. One volunteer has
+been particularly important in helping us the get to the position we are now in.
+He has recently reached a milestone only reached on two other occasions by a
+volunteer and in each case the volunteer worked in the the Science and
+Technology Museum. Our volunteer has reached 10,000 volunteer hours of working
+on the North Star and throughout this time he also acted as our Project Manager
+for everything except the engines. Bruce Gemmill probably was not aware that he
+had reached 10,000 hours when he unfortunately had to announce that he would
+have to suspend his activities as a volunteer and director of PNSAC due to
+family circumstances. We very much hope that he will soon be able to rejoin us
+and continue to help us complete this large project. In the meantime Bruce will
+continue to be our Membership Secretary. During June, Bruce's remarkable
+contribution was recognized by the Museum and in a private event he was
+presented with a certificate and a gift by Cedric St Amour, the Museum
+Corporation Volunteer Coordinator. One of our volunteers, Robert Desjardins,
+also joined Cedric on the occasion to congratulate Bruce on behalf of PNSAC.
+Well done Bruce and we are all very proud of your achievement.
+
+I have always seen our Association as having multiple roles. First and foremost
+we are restoring a major artifact with our volunteers; secondly we show off our
+restoration work to the public which in turn brings visitors and revenue into
+the Museum and thirdly through our experienced volunteers we help to transfer
+skills to younger and less experienced volunteers.
+
+Planning our work in conjunction with the Museum management and the conservation
+staff is something we must always try to jointly do better. It is often a fine
+balancing act to decide when to do work on the aircraft in relation to when the
+Museum is having a major event such as Canada Day. I am hoping that in future we
+can regularly update our work schedule in conjunction with our project plan so
+that we can more readily have the aircraft available for public viewing at the
+times when the Museum would like us to do so, without having to delay our
+restoration work unnecessarily.
+
+I will conclude with an invitation to any of our members not volunteering at
+present to come and join us. Although we have a definite limit on the number of
+volunteers who can get their hands dirty working on restoration work, we always
+welcome others who would like to participate in the running of the organization.
+By becoming involved either as a restoration volunteer or an association
+volunteer you will meet other like minded people and have an interesting time
+talking to members of the public. You do not need to be an expert on aviation or
+on the North Star to make a contribution. I can be reached by email or phone if
+you would like to find out more about volunteering.
+
 
 
 \begin{footnotesize}
