--- a/pnsac/newsletter/article_ProgReport.tex
+++ b/pnsac/newsletter/article_ProgReport.tex
@@ -5,134 +5,111 @@
 % Head
 
 \title{Project Manager's Progress Report}
-\subtitle{November 2015}
+\subtitle{PNS 2016 Status Update}
 \author{Bruce Gemmill}
 
 \maketitle
 
-The aircraft spent considerable time outside this year, but since we
-are short of volunteers, not as much work was done as hoped.  The
-aircraft is still outside because we are waiting for space to be freed
-up in the storage hangar.  We also expect the North Star to be moved
-outside again in early spring, much sooner than normal, to accommodate
-other uses of the storage facility.  This extended time outside has
-delayed some work, and may result in additional weather damage.
-
 \section{Nr 4 Engine}
 \label{sec:engine_4}
 
-The last engine to undergo restoration was disassembled last fall.
-Since the engine shop crew have cleaned, painted and re-assembled much
-of the engine on the engine assembly stand. The refurbished crankshaft
-has been installed in the engine block, and the connecting rods and
-pistons cleaned and polished.  Also completed are the more complex
-cylinder heads and valve train assemblies, and work has begun to
-restore many ancillary pieces, such as the magnetos and other
-electrical components, and accessories.
+Work has continued on much of the ancillary equipment for the engine. The
+supercharger and intercooler have been completed and installed, as well as the
+reduction gearbox. The radiators and header tank have been restored and painted, and
+two of the three radiator sections have been installed. Restoration work has
+begun on the air intake system, and many of the fuel and oil lines. 
 
-The auxiliary gearbox was removed from Nacelle 4 and has been
-completely rebuilt, along with the generator.  These won't be
-installed on the aircraft until shortly before engine 4 is ready to be
-installed.
+\begin{figure}[htbp]
+   \vspace{2em}
+   \centering
+   \includegraphics[scale=0.5]{"PNS 007-im2".png}
+   \caption*{\small \em Volunteer Peter Trobridge inspecting the air intake fairing from engine \#4 prior to beginning restoration work.}
+   \label{fig:engine_no_4_2}
+\end{figure}
 
-Work has also begun on the engine frame which holds the 12 cylinder
-engine and supports the surrounding cowl panels.  Once the engine
-frame is ready, the engine will be transferred to it from the engine
-stand.  Because of a lack of space and shortage of qualified
-volunteers, we don't expect to have engine 4 completed before 2017.  A
-great deal of work is also needed on the cowl panels.  We hope to
-start work on these in the New Year.
+\begin{figure}[htbp]
+   \vspace{2em}
+   \centering
+   \includegraphics[scale=0.5]{"PNS 003-im3".png}
+   \caption*{\small \em Volunteers Robert Desjardins, Bruce Gemmill and Michel Cote hold the refinished coolant tank from engine \#4.  Hours of polishing were required to get the tank to look like new.}
+   \label{fig:coolant_tank}
+\end{figure}
+
+The starter motor was found to be very corroded, and disassembly and repair not viable. A
+new unit has been ordered and will be installed once delivered. The fire
+suppression lines are complete and will be installed along with the cowls when
+ready. Some of the cowl panels have been restored, although it has been found
+that this engine has more corrosion than the other three engines, possibly it
+had been in service longer? This has meant that more work is required to
+refurbish each of the many panels. We still hope to have this engine ready for
+installation by next spring. 
+
+\begin{figure}[htbp]
+   \vspace{2em}
+   \centering
+   \includegraphics[scale=0.5]{"PNS 008-im1".png}
+   \caption*{\small \em Volunteer Garry Dupont working on the re-assembly of engine \#4.}
+   \label{fig:engine_no_4}
+\end{figure}
 
 \section{Fuselage and Main Cabin}
 \label{sec:main_cabin}
 
-Work has continued in the main cabin.  After removing all floor and
-wall panels, as well as numerous fittings, the floor was cleaned and
-all cargo tiedowns thoroughly treated to remove corrosion.  Several
-required removal and repair. The starboard windows were repainted and
-new Plexiglas installed, then the windows were re-installed on the
-aircraft.  The port windows were then removed and repaired, but had to
-be installed prior to completion so the aircraft could stay outside
-this summer.  These will need to be removed again this winter and the
-new glass installed before being returned to the aircraft.  Some
-corrosion damage along the exposed ribs and sub floor has been
-completed.  The rear bulkhead required considerable work.  This
-involved removing a large corroded floor panel and three rear bulkhead
-panels.  New panels were made and are being installed.
+With the aircraft moved outside in March, little work was done in the aircraft
+over the winter. Once the temperatures warmed up, we continued work in the main
+cabin to prepare for completion of the painting started last year. Repairs to
+the rear bulkhead are now complete with the installation of several new pieces
+of aluminum to replace corroded ones. A new section of flooring was installed
+where the rear washroom was situated. This required replacing about 1000 rivets!
 
-The forward bulkhead and forward half of the floor have been painted,
-but further painting was stopped by the arrival of cold weather in
-October.  The painting will have to be completed next summer.
+\begin{figure}[htbp]
+   \vspace{2em}
+   \centering
+   \includegraphics[scale=0.5]{"pns 043-im4".png}
+   \caption*{\small \em A single new floor panel at the rear of the main cabin required over 1000 rivets.  
+   Cleco clips are used to accurately align the panel during riveting.}
+   \label{fig:panel_revets}
+\end{figure}
 
-The forward cargo door was cleaned, painted and new seals installed.
-The door was put back on the aircraft to secure it while outside this
-summer.  This winter we plan on removing the rear cargo door for
-similar work.
+Cleaning and corrosion removal continued throughout the cabin. It seems whenever
+we feel we are near completion, we find more corrosion. We had also planned to
+finish priming the floor and painting the rear bulkhead before the aircraft
+returned to the hanger later in the year, but this was delayed by the shutdown
+of the project while a new Project Manager was hired by the museum. The wood
+floors and walls still need to be repaired, or new panels made, and all will
+require painting. 
 
-The tail section and rear belly compartment underwent some cleaning
-and repair.  This work will also continue this winter in the storage
-hangar.
+\section{Cabin Liners}
+\label{sec:liners}
 
-\section{Cabin Liners and Troop Seats}
-\label{sec:liners_troop_seats}
+All the large pieces of liner have either been repaired or replaced, but with
+limitations on space, most remaining work on the cabin liners has been
+postponed. New window surrounds have also been made, but then all liners will
+require painting and stenciling, and this must wait until there is more room in
+the shop and the paint booth. Liners were also made for the top of the heater
+ducts.
 
-Most original cabin liners have now been repaired or replaced with new
-liners.  The liners still need to be painted and many stencils need to
-be applied, as well as many new snap fasteners.  
+\begin{figure}[htbp]
+   \vspace{2em}
+   \centering
+   \includegraphics[scale=0.5]{P1020369-im5.png}
+   \caption*{\small \em One of the refurbished heater duct sections with a new fabric headliner secured to the top. The sides are covered with mica insulation that was removed, cleaned and reattached after repairs to the metal duct. These will be installed in the main cabin.}
+   \label{fig:heaters_liners}
+\end{figure}
 
-The troop seats were built last year and placed in storage.  Some work
-has been done to restore the many fitting needed to install the troop
-seats, along with litter straps and tiedowns for litters and cargo.
+\section{PNS 2017 Update}
+\label{sec:pnsupdate}
 
-\section{Planned Restoration Work---2016}
-\label{sec:plannedwork}
+We were able to restart work on the aircraft in late January, following the
+arrival of our new Project manager, Rej Demers. So far, we have completed the
+top cowl panels and one of the radiator flaps, which required a repair patch to
+the outer skin, and the electrical harnesses, which are now waiting for
+painting. Work continues on the air box and the remaining cowl panels.
 
-Over the next year, we will continue to work on Engine 4 and the main
-cabin and doors.  The aircraft will be moved outside in the late
-winter or early spring to allow setup for a planned Star Trek exhibit.
-Work will not begin inside the aircraft until the weather warms up, so
-further delays are inevitable.  
-
-We will be able to make new wall panels and either replace or restore
-the wood floor panels.
-
-We hope to have all main cabin painting done this summer, so that the
-wall and floor panels can be installed.  
-
-One other work item that may be started is to clean and restore the
-four engine nacelles.  Pipes and fittings need to be removed, followed
-by a thorough cleaning and a fresh coat of paint.  This work may be
-delayed until qualified volunteers become available.
-
-\section{March 2016 Update}
-\label{sec:update}
-
-Since our report at the November AGM, the aircraft was moved inside,
-so that it could properly sealed against the weather, as it will spend
-much of 2016 outside. The aircraft was moved out again in March.
-During this time, very little work was done on the aircraft, except
-for replacement of the Plexiglas in the port windows, and the
-installation of the ARC-552 UHF radio, kindly transferred to the
-museum by the Department of National Defence.
-
-\subsection{Nr 4 Engine}
-\label{sec:update-engine}
-
-The engine frame has been refurbished, and the engine was transferred
-to the frame, so that ancillary equipment can be installed.  Work has
-also begun on the supercharger, as well as such items as the starter
-motor and header tank.  Some work is also being done on the cowl panels.
-
-%\begin{figure}[htbp]
-%   \vspace{2em}
-%   \centering
-%   %name of the graphic, without the path AND in EPS format:
-%   \includegraphics[scale=0.5]{fwd_cockpit_complete.eps}
-%   %caption of the figure 
-%   \caption*{\small \em Forward cockpit -- complete.}
-%   %label of the figure, which has to correspond to \ref{}:
-%   \label{fig:fwd_cockpit_complete}
-%\end{figure}
+We have decided not to move the aircraft outside this year. With our efforts
+concentrated on completing engine \#4, it is unlikely we would have the resources
+to also complete the repair work in the cabin needed to allow for priming and
+painting, which is the main reason for moving the aircraft outside in the summer.
 
 
 \begin{footnotesize}
