--- a/pnsac/newsletter/main_document.tex
+++ b/pnsac/newsletter/main_document.tex
@@ -49,9 +49,9 @@
 
 \begin{document}
 
-\volume{12} % \volnumber{1}
+\volume{13} % \volnumber{1}
 \issue{1}
-\date{March 2016} 
+\date{March 2017} 
 \titlepage
 
 % Editor's notes
@@ -67,9 +67,9 @@
 % GDG CASM report .................................................... %
 
 % Report
-\begin{article}
-	\input{article_MessageDGCASM} 
-\end{article}
+%\begin{article}
+%	\input{article_MessageDGCASM} 
+%\end{article}
 
 % President's report ................................................. %
 
@@ -78,7 +78,7 @@
 	\input{article_PresReport} 
 \end{article}
 
-%\pagebreak
+\pagebreak
 
 % Progress report ................................................... %
 
@@ -92,9 +92,9 @@
 % Member interview ................................................... %
 
 % Report
-\begin{article}
-    \input{article_MemberInterview} 
-\end{article}
+%\begin{article}
+%    \input{article_MemberInterview} 
+%\end{article}
 
 \pagebreak
 
@@ -103,9 +103,9 @@
 
 % Feature article
 
-\begin{article}
-	\input{article_Feature1} 
-\end{article}
+%\begin{article}
+%	\input{article_Feature1} 
+%\end{article}
 
 %\pagebreak
 
@@ -147,18 +147,18 @@
 %\end{article}
 
 % Miscellany article 
- \begin{article}
- 	\input{article_Miscellany} 
- \end{article}
+% \begin{article}
+% 	\input{article_Miscellany} 
+% \end{article}
 
 %\pagebreak
 
 
 % Forthcoming events ................................................. %
 
-\begin{article}
-   \input{article_ForthEvents} 
-\end{article}
+%\begin{article}
+%   \input{article_ForthEvents} 
+%\end{article}
 
 \pagebreak
 
